# fincalc

./: add-tools.sh  app.py  osm.sql  pyproject.toml  shellpaste.txt
.github/workflows/: ok.yml
