[project]
name = "fincalc"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "duckdb>=1.5.3",
    "folium>=0.20.0",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "pyarrow>=24.0.0",
    "requests>=2.34.2",
    "seaborn>=0.13.2",
    "streamlit>=1.58.0",
    "streamlit-folium>=0.27.2",
    "streamlit-pdf>=2.0.1",
]
